<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/tvPleaseCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/create_account"/>

    <EditText
        android:id="@+id/etRegisterUsername"
        android:layout_below="@id/tvPleaseCreateAccount"
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:hint="@string/username"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="20dp"
        android:layout_height="wrap_content"/>
    

    <EditText
        android:id="@+id/etRegisterName"
        android:layout_below="@id/etRegisterUsername"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:hint="@string/your_name"
        android:drawablePadding="20dp"
        android:drawableStart="@drawable/baseline_account_box_24"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_below="@id/etRegisterName"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawablePadding="20dp"
        android:drawableStart="@drawable/baseline_lock_24"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_below="@id/etRegisterPassword"
        android:text="@string/register"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvLoginHere"
        android:text="@string/already_have_account_login_here"
        android:layout_marginTop="20dp"
        android:layout_below="@id/btnRegister"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>